Fix incomplete objections and convert docs to MDX format
- Fixed 2 incomplete objections:
  * 'What if my tenants don' → 'What if my tenants don't pay or don't move out?'
  * 'I a n d won't b a c k out?' → 'How do I know you won't back out?'
- Added audit script: scripts/fix-incomplete-objections.ts
- Converted all documentation from .md to .mdx format
- Updated README references to point to .mdx files
- Added objection fixes documentation

--- a/docs/dependencies/DEPENDENCY_AUTOMATION_SETUP.mdx
+++ b/docs/dependencies/DEPENDENCY_AUTOMATION_SETUP.mdx
@@ -150,5 +150,5 @@ ignore:
 
 ---
 
-**Questions?** See [DEPENDENCY_MANAGEMENT.md](./DEPENDENCY_MANAGEMENT.md) for detailed documentation.
+**Questions?** See [DEPENDENCY_MANAGEMENT.mdx](./DEPENDENCY_MANAGEMENT.mdx) for detailed documentation.
 
