--- a/docs/features/AUTO_VIDEO_POPULATION_SUMMARY.mdx
+++ b/docs/features/AUTO_VIDEO_POPULATION_SUMMARY.mdx
@@ -35,7 +35,7 @@ This feature automatically searches YouTube channels from Andy Elliott, Eric Cli
    YOUTUBE_API_KEY=your_api_key_here
    ```
 
-See `YOUTUBE_API_SETUP.md` for detailed instructions.
+See `YOUTUBE_API_SETUP.mdx` for detailed instructions.
 
 ### 2. Ensure OpenAI API Key is Set
 
@@ -102,8 +102,8 @@ The script generates a complete `data/videoRecommendations.ts` file with:
 ## Manual Alternative
 
 If you prefer manual control, see:
-- `scripts/find-youtube-videos.md` for manual instructions
-- `VIDEO_RECOMMENDATIONS_FEATURE.md` for feature overview
+- `scripts/find-youtube-videos.mdx` for manual instructions
+- `VIDEO_RECOMMENDATIONS_FEATURE.mdx` for feature overview
 
 ## Future Enhancements
 
