--- a/docs/features/YOUTUBE_API_SETUP.mdx
+++ b/docs/features/YOUTUBE_API_SETUP.mdx
@@ -120,5 +120,5 @@ If you prefer not to use the API, you can manually add videos:
 1. Visit each channel URL
 2. Find relevant videos
 3. Update `data/videoRecommendations.ts` manually
-4. See `scripts/find-youtube-videos.md` for instructions
+4. See `scripts/find-youtube-videos.mdx` for instructions
 
