--- a/docs/security/JWT_IMPLEMENTATION_SUMMARY.mdx
+++ b/docs/security/JWT_IMPLEMENTATION_SUMMARY.mdx
@@ -176,9 +176,9 @@ const userId = auth.userId!;
 
 ## 📚 Documentation
 
-- See `SECURITY_AUDIT.md` for security vulnerabilities
-- See `SECURITY_QUICK_FIXES.md` for implementation guide
-- See `TESTING.md` for test documentation
+- See `SECURITY_AUDIT.mdx` for security vulnerabilities
+- See `SECURITY_QUICK_FIXES.mdx` for implementation guide
+- See `TESTING.mdx` for test documentation
 
 ## ✨ Next Steps
 
