--- a/docs/testing/TEST_IMPLEMENTATION_SUMMARY.mdx
+++ b/docs/testing/TEST_IMPLEMENTATION_SUMMARY.mdx
@@ -82,7 +82,7 @@ npm run test:ci          # CI-optimized test run with coverage
 2. `__tests__/api/data/custom-responses.test.ts`
 3. `__tests__/components/AuthGuard.test.tsx`
 4. `.github/workflows/test.yml`
-5. `TESTING.md` (comprehensive testing guide)
+5. `TESTING.mdx` (comprehensive testing guide)
 
 ### Updated Files:
 1. `__tests__/components/LoginForm.test.tsx` - Fixed to match actual implementation
