--- a/docs/features/VIDEO_RECOMMENDATIONS_FEATURE.mdx
+++ b/docs/features/VIDEO_RECOMMENDATIONS_FEATURE.mdx
@@ -47,7 +47,7 @@ Use the automated script to search YouTube channels and categorize videos with A
 
 1. **Set up YouTube Data API**:
    - Get a YouTube Data API v3 key from Google Cloud Console
-   - See `YOUTUBE_API_SETUP.md` for detailed instructions
+   - See `YOUTUBE_API_SETUP.mdx` for detailed instructions
    - Add `YOUTUBE_API_KEY` to your `.env.local` file
 
 2. **Run the Auto-Population Script**:
@@ -77,7 +77,7 @@ Manually add videos by visiting each channel:
 3. **Get Video URLs**: Copy the video URL from YouTube
 4. **Update the Data File**: Edit `data/videoRecommendations.ts` with the actual URLs
 
-See `scripts/find-youtube-videos.md` for detailed manual instructions.
+See `scripts/find-youtube-videos.mdx` for detailed manual instructions.
 
 3. **Optional Enhancements**:
    - Add video thumbnails (YouTube provides thumbnail URLs)
